@@ -18,8 +18,7 @@ Map Service (<a href="http://www.opengeospatial.org/standards/wms">WMS</a>)
 1.3.0 specification.
 </p>
 <h2>Status</h2>
-The THREDDS WMS server is considered experimental, do not rely on it in
-a production environment.<br><h2><a name="Which_files_can_be_served_through_the"></a>Which files can be served through the WMS server? </h2>
+The THREDDS WMS server is beta, please report any problems you have.<br><h2><a name="Which_files_can_be_served_through_the"></a>Which files can be served through the WMS server? </h2>
 <ol><li>Data files must contain gridded data.</li><li>The
 NetCDF-Java Common Data Model must be able to identify the coordinates
 system used. Check this by opening in the Grid Panel of the <a href="http://www.unidata.ucar.edu/software/netcdf-java/v2.2/webstart/index.html">ToolsUI</a>
@@ -33,7 +32,16 @@ They are listed in the resulting THREDDS catalogs as are other
 datasets.&nbsp;WMS clients may not be able to directly use the THREDDS
 catalogs to find the WMS services but the catalogs are useful for users
 to browse and for separate search services (e.g., OGC catalog
-services).</p><h3>Serving Remote Dataset</h3><p>The TDS can also
+services).</p>
+<p>You can specify your own color pallettes by placing them in a directory and specifying the directory name in the <strong>threddsConfig.xml</strong> file:</p>
+<pre style="margin-left: 40px;">&lt;WMS&gt;<br>  ...<br>  &lt;paletteLocationDir&gt;/data/mypalettes/&lt;paletteLocationDir&gt;<br>&lt;/WMS&gt;</pre>
+<p>If the directory location starts with a &quot;/&quot;, the path is absolute, otherwise it is relative to <strong>${tomcat_home}/content/thredds/</strong>. If you dont specify it, or specify it incorrectly, the default pallettes will be used, which are in the war file under <strong>WEB-INF/pallettes</strong>.</p>
+<p>You can specify your own OGC metadata file  in the <strong>threddsConfig.xml</strong> file:</p>
+<pre style="margin-left: 40px;">&lt;WMS&gt;<br>  ...<br>  &lt;ogcMetaXML&gt;OGCMeta.xml&lt;/ogcMetaXML&gt; <br>&lt;/WMS&gt;</pre>
+<p>Use an absolute file path, or a path reletive to <strong>${tomcat_home}/content/thredds/</strong>. Otherwise the default file <strong>WEB-INF/OGCMeta.xml</strong>. is used.</p>
+<p>&nbsp;</p>
+<h3>Serving Remote Dataset</h3>
+<p>The TDS can also
 serve remote datasets with the WMS protocol if configured to do so. It
 must be explicitly configured&nbsp;in the <code>threddsConfig.xml</code> configuration file. This is done by adding an <strong>allowRemote</strong> element to the <strong>WMS</strong> element as follows:</p><pre style="margin-left: 40px;">&lt;WMS&gt;<br>  &lt;allow&gt;true&lt;/allow&gt;<br>  &lt;allowRemote&gt;true&lt;/allowRemote&gt; <br>  ...<br>&lt;/WMS&gt;</pre><p>A slight extension of the WMS Dataset URL format allows the
 TDS to serve remote datasets. The dataset is identified by adding the
@@ -49,7 +57,7 @@ OPeNDAP URL might be</p>
 <hr width="100%">
 <address>
   <img src="../../images/thread.png" alt="THREDDS" height="108" width="110">
-  This document is maintained by Unidata and was last updated May 2009. Send comments to
+  This document is maintained by Unidata and was last updated June 2009. Send comments to
   <a href="mailto:support-thredds@unidata.ucar.edu">THREDDS support</a>.
 </address>
 
